--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Pizza",
+  "name": "ClientBase",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,6 +17,7 @@
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
     "grunt-contrib-watch": "^0.6.1",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "mongodb": "^2.2.22"
   }
 }
